; ModuleID = '/home/carl/AnghaBench/micropython/py/extr_stream.c_mp_stream_write.c'
source_filename = "/home/carl/AnghaBench/micropython/py/extr_stream.c_mp_stream_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mp_const_none = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mp_stream_write(i32 %0, i8* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load i32, i32* %6, align 4
  %13 = load i8*, i8** %7, align 8
  %14 = load i64, i64* %8, align 8
  %15 = load i32, i32* %9, align 4
  %16 = call i32 @mp_stream_rw(i32 %12, i8* %13, i64 %14, i32* %10, i32 %15)
  store i32 %16, i32* %11, align 4
  %17 = load i32, i32* %10, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %28

19:                                               ; preds = %4
  %20 = load i32, i32* %10, align 4
  %21 = call i64 @mp_is_nonblocking_error(i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %19
  %24 = load i32, i32* @mp_const_none, align 4
  store i32 %24, i32* %5, align 4
  br label %31

25:                                               ; preds = %19
  %26 = load i32, i32* %10, align 4
  %27 = call i32 @mp_raise_OSError(i32 %26)
  br label %31

28:                                               ; preds = %4
  %29 = load i32, i32* %11, align 4
  %30 = call i32 @MP_OBJ_NEW_SMALL_INT(i32 %29)
  store i32 %30, i32* %5, align 4
  br label %31

31:                                               ; preds = %23, %28, %25
  %32 = load i32, i32* %5, align 4
  ret i32 %32
}

declare dso_local i32 @mp_stream_rw(i32, i8*, i64, i32*, i32) #1

declare dso_local i64 @mp_is_nonblocking_error(i32) #1

declare dso_local i32 @mp_raise_OSError(i32) #1

declare dso_local i32 @MP_OBJ_NEW_SMALL_INT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
